k8s/locust.k8s.p4.greenpeace.org/locust-slave.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  labels:
    app: locust
    run: locust-dev-slave
    p4.greenpeace.org/locust: k8s.p4.greenpeace.org
  name: locust-dev-slave
spec:
  replicas: 10
  selector:
    matchLabels:
      run: locust-dev-slave
  strategy:
    rollingUpdate:
      maxSurge: 3
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: locust-dev-slave
        p4.greenpeace.org/locust: k8s.p4.greenpeace.org
    spec:
      containers:
      - env:
        - name: LOCUST_MODE
          value: slave
        - name: LOCUST_MASTER
          value: locust-dev-master
        - name: CACHE_BUSTER
          value: "true"
        - name: TARGET_URL
          value: https://k8s.p4.greenpeace.org/flibble
        image: gcr.io/planet-4-151612/locust:0.1.0
        imagePullPolicy: Always
        name: locust-dev-slave
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
---
# apiVersion: autoscaling/v1
# kind: HorizontalPodAutoscaler
# metadata:
#   name: locust-dev-autoscaler
# spec:
#   scaleTargetRef:
#     kind: Deployment
#     name: locust-dev-slave
#   minReplicas: 10
#   maxReplicas: 20
#   targetCPUUtilizationPercentage: 80
